Add some styling, made the numbers digital

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
             <input id="time-input" type="text" maxlength="5" required/>
             <input type="submit" value="Set" />
         </form>
+        <div class="tipbox">TIP: Press F11 to enable full-screen mode and get rid of any unnecessary distractions.</div>
     </section>
     <section id="timer">
         <div id="timer-container">
             <code id="timer-minutes"></code>
-            <code> : </code>
+            <code>:</code>
             <code id="timer-seconds"></code>
         </div>
-        <button id="timer-button">Next page</button>
+        <button id="timer-button">Next<br>page</button>
         <div id="total-timer">
             <small>You've been studying <code id="total-time"></code> in total.</small>
         </div>
