First version capable of punishing the user with sound.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </form>
         <div class="tipbox">TIP: Press F11 to enable full-screen mode and get rid of any unnecessary distractions.</div>
     </section>
+
     <section id="timer" class="hidden">
         <div id="timer-container">
             <code id="timer-minutes"></code>
@@ -43,10 +44,12 @@
             <code id="timer-seconds"></code>
         </div>
         <button id="timer-button">Next<br>page</button>
-        <div id="total-timer">
-            <small>You've been studying <code id="total-time"></code> in total.</small>
+        <div id="total-timer" class="small">You've been studying <code id="total-time"></code> in total.</div>
+        <div id="punishment-placeholder">
+            <audio id="punishment" src="media/punishment.mp3" loop></audio> <!-- TEMPORARY -->
         </div>
     </section>
+
     <section id="settings">
         <button id="theme-button">Switch theme</button>
         <button id="distractions-button">Minimal distractions mode</button>
